Ready for Vercel deployment

--- a/daily-deals-sa/package.json
+++ b/daily-deals-sa/package.json
@@ -7,10 +7,14 @@
     "dev": "next dev",
     "lint": "eslint .",
     "start": "next start",
+    "postinstall": "prisma generate",
+    "db:push": "prisma db push",
     "db:migrate": "prisma migrate dev",
     "db:migrate:deploy": "prisma migrate deploy",
     "db:generate": "prisma generate",
     "db:seed": "prisma db seed",
+    "seed:products": "tsx scripts/seed-products.ts",
+    "seed:drops": "tsx scripts/seed-drops.ts",
     "create-admin": "tsx scripts/create-admin.ts",
     "deploy": "bash scripts/deploy-vercel.sh",
     "setup:production": "bash scripts/setup-production.sh"
