--- a/daily-deals-sa/vercel.json
+++ b/daily-deals-sa/vercel.json
@@ -3,15 +3,17 @@
   "devCommand": "npm run dev",
   "installCommand": "npm install --legacy-peer-deps",
   "framework": "nextjs",
+  "regions": ["iad1"],
   "env": {
     "DATABASE_URL": "@database_url",
     "NEXTAUTH_URL": "@nextauth_url",
     "NEXTAUTH_SECRET": "@nextauth_secret",
+    "PAYMENTS_MODE": "@payments_mode",
+    "IKHOKHA_APP_ID": "@ikhokha_app_id",
+    "IKHOKHA_APP_KEY": "@ikhokha_app_key",
+    "IKHOKHA_API_URL": "@ikhokha_api_url",
     "GOOGLE_CLIENT_ID": "@google_client_id",
     "GOOGLE_CLIENT_SECRET": "@google_client_secret",
-    "STRIPE_PUBLISHABLE_KEY": "@stripe_publishable_key",
-    "STRIPE_SECRET_KEY": "@stripe_secret_key",
-    "STRIPE_WEBHOOK_SECRET": "@stripe_webhook_secret",
     "EMAIL_FROM": "@email_from",
     "SMTP_HOST": "@smtp_host",
     "SMTP_PORT": "@smtp_port",
