--- a/daily-deals-sa/package.json
+++ b/daily-deals-sa/package.json
@@ -53,6 +53,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/nodemailer": "^7.0.2",
     "@vercel/analytics": "latest",
+    "@vercel/blob": "^2.0.0",
     "autoprefixer": "^10.4.20",
     "axios": "^1.12.2",
     "bcryptjs": "^3.0.2",
