--- a/daily-deals-sa/package.json
+++ b/daily-deals-sa/package.json
@@ -62,12 +62,14 @@
     "cmdk": "1.0.4",
     "crypto-js": "^4.2.0",
     "date-fns": "4.1.0",
+    "date-fns-tz": "^3.0.0",
     "embla-carousel-react": "8.5.1",
     "geist": "latest",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
     "next-auth": "^4.24.11",
+    "next-pwa": "^5.6.0",
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.9",
     "prisma": "^6.17.1",
